# dwarfs-rs

./: .gitignore  Cargo.toml  README.md  clippy.toml  flake.nix  typos.toml
dwarfs/: CHANGELOG.md  Cargo.toml  README.md
dwarfs-enc/: Cargo.toml  LICENSE-GPL-3.0  README.md
dwarfs-enc/examples/: mkdwarfs.rs
dwarfs-enc/src/: archive.rs  chunker.rs  error.rs  lib.rs  metadata.rs  ordered_parallel.rs  section.rs
dwarfs-enc/tests/: basic.rs
dwarfs-test/: Cargo.toml
dwarfs-test/src/: check_content.rs  lib.rs  main.rs  mtree.rs  traverse.rs
dwarfs-test/tests/: basic.rs  large.rs  tests.rs
dwarfs/src/: archive.rs  fsst.rs  lib.rs  metadata.rs  section.rs
dwarfs/src/metadata/: de_frozen.rs  de_thrift.rs  ser_frozen.rs  ser_thrift.rs  serde_frozen.rs  serde_thrift.rs  tests.rs
src/: archive.rs  lib.rs  metadata.rs  section.rs
src/metadata/: frozen.rs  schema.rs  serde_thrift.rs  tests.rs  unpacked.rs
