[package]
name = "dwarfs"
version = "0.0.0"
edition = "2024"
description = "WIP"
license = "MIT OR Apache-2.0"

[dependencies]
sha2 = "0.10.9"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
zerocopy = { version = "0.8.25", features = ["derive", "std"] }
zstd = "0.13.3"

[lints.clippy]
dbg-macro = "warn"
