[package]
name = "dwarfs"
version = "0.0.0"
edition = "2024"
description = "WIP"
license = "MIT OR Apache-2.0"

[features]
default = ["zstd", "log"]

# Compression algorithms support.
zstd = ["dep:zstd"]
lzma = ["dep:xz2"]
lz4 = ["dep:lz4"]

# Extra functionalities.
log = ["dep:log", "dep:measure_time"]

[dependencies]
bstr = "1.12.0"
log = { version = "0.4.27", optional = true }
lru = "0.14.0"
lz4 = { version = "1.28.1", optional = true }
measure_time = { version = "0.9.0", optional = true }
positioned-io = { version = "0.3.4", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
xz2 = { version = "0.1.7", optional = true }
zerocopy = { version = "0.8.25", features = ["derive", "std"] }
zstd = { version = "0.13.3", optional = true }

[lints.clippy]
dbg-macro = "warn"

[workspace]
members = ["dwarfs-test"]

[profile.bench]
debug = "line-tables-only"
