[package]
name = "dwarfs-enc"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
crossbeam-channel = "0.5.15"
dwarfs = { version = "0.2.0", path = "../dwarfs", features = ["serialize"] }
indexmap = "2.9.0"
rustic_cdc = "0.3.1"
rustix = { version = "1.0.7", features = ["fs"] }
serde = "1.0.219"
sha2 = "0.10.9"
zerocopy = { version = "0.8.25", features = ["derive", "std"] }
zstd-safe = { version = "7.2.4", default-features = false }
